@@ -89,7 +89,7 @@ LastFmTreeModel::slotAddFriends()
                 afriend->setAvatarUrl( avatarUrl );
 
             m_myFriends->appendChild( afriend );
-            appendUserStations( afriend, name );
+            // appendUserStations( afriend, name ); // last.fm radio was discontinued in 2014, hide some related functionality
         }
 
         endInsertRows();
@@ -423,7 +423,7 @@ LastFmTreeModel::flags( const QModelIndex &index ) const
     case MyRecommendations:
     case PersonalRadio:
     case MixRadio:
-        flags |= Qt::ItemIsDragEnabled;
+        //flags |= Qt::ItemIsDragEnabled; // last.fm radio was discontinued in 2014, hide some related functionality
 
     default:
         break;
@@ -487,9 +487,10 @@ void
 LastFmTreeModel::setupModelData( LastFmTreeItem *parent )
 {
     // no need to call beginInsertRows() here, this is only called from constructor
-    parent->appendChild( new LastFmTreeItem( mapTypeToUrl( LastFm::MyRecommendations ), LastFm::MyRecommendations, parent ) );
-    parent->appendChild( new LastFmTreeItem( mapTypeToUrl( LastFm::PersonalRadio ), LastFm::PersonalRadio, parent ) );
-    parent->appendChild( new LastFmTreeItem( mapTypeToUrl( LastFm::MixRadio ), LastFm::MixRadio, parent ) );
+    // last.fm radio was discontinued in 2014, hide some related functionality
+    // parent->appendChild( new LastFmTreeItem( mapTypeToUrl( LastFm::MyRecommendations ), LastFm::MyRecommendations, parent ) );
+    // parent->appendChild( new LastFmTreeItem( mapTypeToUrl( LastFm::PersonalRadio ), LastFm::PersonalRadio, parent ) );
+    // parent->appendChild( new LastFmTreeItem( mapTypeToUrl( LastFm::MixRadio ), LastFm::MixRadio, parent ) );
 
     m_myTopArtists = new LastFmTreeItem( LastFm::TopArtists, parent );
     parent->appendChild( m_myTopArtists );
